--- a/html/about.html
+++ b/html/about.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us Page</title>
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <style>
 body::before{
@@ -29,7 +31,7 @@ body::before{
         </label>
         <ul class="menu">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#" class="active">About</a></li>
+            <li><a href="#" class="active">About Us</a></li>
             <li><a href="applicant.html">Applicant</a></li>
             <li><a href="employer.html">Employer</a></li>
             <li><a href="services.html">Services</a></li>
@@ -40,10 +42,38 @@ body::before{
         </div>
     </nav>
 
+    <header>
+        <h1 class="h1">About Us</h1>
+    </header>
+
+    <header>
+        <h1 class="h2">City Government of Los Baños Public Employment Service Office (PESO)</h1>
+    </header>
     <!-- Body -->
+    <hr>
+    <section class="content">
+        <div class="text-section">
+            <h3>Mandate</h3>
+            <p>Our mandate is not a rulebook; it's a manifesto of daring dreams and audacious aspirations that challenge the status quo and dance on the edge of imagination.</p>
+            <p>PESO is a conduit of the Department of Labor and Employment in the implementation of employment facilitation programs in the locality.</p>
+            <h3>Mission</h3>
+            <p>To promote gainful employment by ensuring prompt, timely, and efficient delivery of full-cycle employment facilitation services.</p>
+            <h3>Vision</h3>
+            <p>A decent job for at least one member of Tacurongnon household.</p>
+            <h3>Core Values</h3>
+            <p>
+                Passion<br><br>
+                Empathy<br><br>
+                Social Responsibility<br><br>
+                Open - Mindedness
+            </p>
+        </div>
+        <div class="image-section">
+            <img src="../img/logo_peso.png" alt="Logo">
+        </div>
+    </section>
+    <hr>
 
-    
-
-   <script src="../javascript/script.js"></script> <!-- You can link your JavaScript file here if needed -->
+    <script src="../javascript/script.js"></script> <!-- You can link your JavaScript file here if needed -->
 </body>
 </html>
