--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </label>
         <ul class="menu">
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="html/about.html">About</a></li>
+            <li><a href="html/about.html">About Us</a></li>
             <li><a href="html/applicant.html">Applicant</a></li>
             <li><a href="html/employer.html">Employer</a></li>
             <li><a href="html/services.html">Services</a></li>
