--- a/html/about.html
+++ b/html/about.html
@@ -35,7 +35,7 @@ body::before{
             <li><a href="applicant.html">Applicant</a></li>
             <li><a href="employer.html">Employer</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="auth">
             <button>Login / Register</button>
@@ -44,13 +44,9 @@ body::before{
 
     <header>
         <h1 class="h1">About Us</h1>
-    </header>
-
-    <header>
         <h1 class="h2">City Government of Los Baños Public Employment Service Office (PESO)</h1>
     </header>
     <!-- Body -->
-    <hr>
     <section class="content">
         <div class="text-section">
             <h3>Mandate</h3>
@@ -72,7 +68,59 @@ body::before{
             <img src="../img/logo_peso.png" alt="Logo">
         </div>
     </section>
+    <hr> <!-- about image scroll--> 
+    
+    <h1 class="h3">Officers</h1>
+    <div id="image-container-module">
+        <div class="image-item">
+            <img src="../img/logo_peso.png" alt="Person 1">
+            <div class="info">
+                <h3>Person 1</h3>
+                <p>Job Title 1</p>
+            </div>
+        </div>
+        <div class="image-item">
+            <img src="../img/logo_peso.png" alt="Person 2">
+            <div class="info">
+                <h3>Person 2</h3>
+                <p>Job Title 2</p>
+            </div>
+        </div>
+        <div class="image-item">
+            <img src="../img/logo_peso.png" alt="Person 3">
+            <div class="info">
+                <h3>Person 3</h3>
+                <p>Job Title 3</p>
+            </div>
+        </div>
+        <div class="image-item">
+            <img src="../img/logo_peso.png" alt="Person 4">
+            <div class="info">
+                <h3>Person 4</h3>
+                <p>Job Title 4</p>
+            </div>
+        </div>
+        <div class="image-item">
+            <img src="../img/logo_peso.png" alt="Person 5">
+            <div class="info">
+                <h3>Person 5</h3>
+                <p>Job Title 5</p>
+            </div>
+        </div>
+    </div>
     <hr>
+    <section class="content">
+    <div class="text-section-2">
+    <h3>Clients of PESO</h3>
+    <p>Jobseekers | Employer</p>
+    <p>OFWs  | Researchers</p>
+    <p>Students | Returning</p>
+    <p>Marginalized groups of workers who seek the services of PESO</p>
+    <p>Other persons or organizations engaged in Employment Promotion Program</p>
+    </div>
+    </section>
+    <hr>
+
 
     <script src="../javascript/script.js"></script> <!-- You can link your JavaScript file here if needed -->
 </body>
