--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <span class="label3">Public Employment Service Office</span><br>
             <span class="label4"> JOB PORTAL &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span><br>
             <span class="label5">YOUR <span style="color: #3D93D3; font-weight: bold">NEW CAREER </span> STARTS HERE!</span></p>
-            <button class="label6">Browse Jobs</button>
+            <button class="label6">Find Job</button>
             <p><span class="label7"> Available in one roof the various employment promotion, manpower programs, and services of the DOLE </span><br>
-                <span class="label8">and other government agencies to enable all types of clientele to know more about them and seek specific</span> <br>
-                <span class="label9"></span>assistance they require.</span></p>
+                <span class="label8">and other government agencies to enable all types of clientele to know more about them and seek </span> <br>
+                <span class="label9"></span>specific assistance they require.</span></p>
         </div>
     </div>
 
