--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conctact Us Page</title>
   <link rel="stylesheet" href="../css/contact.css">
-  <link rel="stylesheet" href="../css/style.css">   
+  <link rel="stylesheet" href="../css/nav_float.css">   
 </head>
 <style>
 body::before{
@@ -59,6 +59,13 @@ body::before{
     loading="lazy">
   </iframe>
 </section> 
+ <!-- Phone Number Section -->
+ <section class="phone-section">
+  <div class="phone-container">
+    <h2><img src="../img/contact.png" alt="Phone Logo"> Phone Number</h2>
+    <p>(049) 536 5976</p>
+  </div>
+</section>
 <!-- Email Section -->
 <section class="email-section">
     <div class="email-container">
