--- a/html/employer.html
+++ b/html/employer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/nav_float.css">
 </head>
 <style>
 body::before{
@@ -39,7 +39,9 @@ body::before{
             <button>Login / Register</button>
         </div>
     </nav>
-
+    <header>
+        <h1 class="h1">Employer Dashboard</h1>
+    </header>
     <!-- Body -->
 
     
