--- a/html/services.html
+++ b/html/services.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/services.css">
+  <link rel="stylesheet" href="../css/nav_float.css">
 </head>
-<style>
-body::before{
-    background-image:none;
-    background-color:#EBEEF1;
-    }
-</style>
 <body>
 
     <!-- Navigation -->
@@ -29,21 +24,40 @@ body::before{
         </label>
         <ul class="menu">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html" >About</a></li>
+            <li><a href="about.html" >About Us</a></li>
             <li><a href="applicant.html">Applicant</a></li>
             <li><a href="employer.html">Employer</a></li>
             <li><a href="#" class="active">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="auth">
             <button>Login / Register</button>
         </div>
     </nav>
 
+    <header>
+        <h1 class="h1">Services</h1>
+    </header>
     <!-- Body -->
-
-    
-
+    <div class="services-card">
+    <div class="card-learning">
+        <div class="card-details">
+          <img src="../img/learning.png" alt="learning Logo">
+          <p class="text-title">E-learning</p>
+          <p class="text-body">Get certificate from PESO livelihood training, by enrolling the courses available.</p>
+        </div>
+        <button class="card-button">More info</button>
+      </div>
+      <div class="divider"></div>
+      <div class="card-ofw">
+        <div class="card-details">
+          <img src="../img/ofw.png" alt="ofw Logo">
+          <p class="text-title">OFW survey</p>
+          <p class="text-body">Update PESO on your current living situation</p>
+        </div>
+        <button class="card-button">More info</button>
+      </div>
+    </div>
    <script src="../javascript/script.js"></script> <!-- You can link your JavaScript file here if needed -->
 </body>
 </html>
