--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,7 @@
             <button class="sign" type="submit">Sign in</button>
         </form>
         <p class="signup">Don't have an account?
-            <a id="signup" href="register.php">Signup</a>
+            <a id="signup" href="register.html">Signup</a>
         </p>
     </div>
 
