--- a/html/register.html
+++ b/html/register.html
@@ -68,7 +68,7 @@
             <span>Confirm password</span>
         </label>
         <button class="submit" type="submit">Submit</button>
-        <p class="signin">Already have an account? <a href="login.php">Signin</a></p>
+        <p class="signin">Already have an account? <a href="login.html">Signin</a></p>
     </form>
 
     <script src="javascript/script.js"></script> <!-- You can link your JavaScript file here if needed -->
